--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:clear": "jest --clearCache"
   },
   "dependencies": {
-    "@universal-packages/fs-utils": "^1.0.0"
+    "@universal-packages/fs-utils": "1.0.1"
   },
   "devDependencies": {
     "@types/jest": "^28.1.0",
