--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "update-dependents": "umaintenance update-dependents"
   },
   "dependencies": {
-    "@universal-packages/fs-utils": "1.0.1"
+    "@universal-packages/fs-utils": "^1.0.3"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
